# praat

./: .gitignore  .ninja_deps  .ninja_log  AUDIENCIA_PARTE_01.TextGrid  CMakeCache.txt  CMakeLists.txt  CMakeLists_old.txt  HOW_TO_BUILD_ALL.md  HOW_TO_BUILD_ONE.md  Makefile  Makefile.old  PraatVS.sln  PraatVS.vcxproj  PraatVS.vcxproj.filters  README.md  WhatsApp_Audio_2026-02-12_at_09_37_26__1_.TextGrid  WhatsApp_Audio_2026-02-12_at_09_37_27__1_.TextGrid  WhatsApp_Video_2025-02-17_at_15_49_59.TextGrid  build.ninja  cmake_install.cmake  makefile.defs  meson.build  org.praat.Praat.metainfo.xml
EEG/: CMakeLists.txt  EEG.cpp  Makefile  cmake_install.cmake  praat_EEG.cpp
FFNet/: CMakeLists.txt  FFNet.cpp  FFNet_Eigen.cpp  FFNet_Matrix.cpp  FFNet_PatternList_ActivationList.cpp  Makefile  cmake_install.cmake  manual_FFNet.cpp  praat_FFNet_init.cpp
LPC/: CMakeLists.txt  Cepstrumc.cpp  FormantPath.cpp  FormantPathArea.h  LPC.cpp  LPC.h  LPCFrameAndLineSpectralFrequenciesFrame.cpp  LPCFrameAndLineSpectralFrequenciesFrame.h  LPCFrameAndLineSpectralFrequenciesFrame_def.h  LPCFrameIntoFormantFrame.cpp  LPCFrameIntoFormantFrame_def.h  LPCFrameIntoSampledFrame_def.h  LPC_and_Cepstrumc.cpp  LPC_and_Formant.cpp  LPC_and_Formant.h  LPC_and_LFCC.cpp  LPC_and_LineSpectralFrequencies.cpp  LPC_and_LineSpectralFrequencies.h  LPC_and_Polynomial.cpp  LPC_and_Polynomial.h  LPC_and_Tube.cpp  LPC_def.h  LineSpectralFrequencies_def.h  Makefile  PowerCepstrogram.cpp  PowerCepstrogram.h  PowerCepstrogramFrameIntoMatrixFrame.cpp  PowerCepstrogramFrameIntoMatrixFrame_def.h  PowerCepstrum.cpp  PowerCepstrum.h  PowerCepstrumWorkspace.h  Roots_and_Formant.cpp  SoundFrameIntoFormantFrame.cpp  SoundFrameIntoFormantFrame_def.h  SoundFrameIntoLPCFrame.cpp  SoundFrameIntoLPCFrame_def.h  SoundFrameIntoPowerCepstrogramFrame.cpp  SoundFrameIntoPowerCepstrogramFrame.h  Sound_and_LPC.cpp  Sound_and_LPC.h  (+12 more)
OpenGL/: OpenGL_Graphics.cpp
artsynth/: CMakeLists.txt  Makefile  cmake_install.cmake  praat_Artsynth.cpp
docs/: LICENSE.txt  Welcome.html  download_chrome.html  download_linux.html  download_mac.html  download_raspberrypi.html  download_win.html  index.html  praat.html
dwsys/: CMakeLists.txt  Eigen.cpp  Eigen.h  Eigen_def.h  FileInMemory.cpp  FunctionSeries_def.h  Index.cpp  MATTypes_enums.h  MAT_numerics.cpp  MAT_numerics.h  Makefile  NUM2.cpp  NUM2.h  NUMFourier.cpp  NUMFourier.h  NUMcomplex.cpp  NUMcomplex.h  NUMlapack.h  NUMsorting.h  Permutation.h  Permutation_and_Index.cpp  Roots.cpp  Roots_def.h  SlopeSelector.cpp  SlopeSelector_def.h  cmake_install.cmake
dwtest/: 3x3s_format0.Eigen  pols1973_format0.CCA  pols1973_format0.PCA  pols1973_format1.Discriminant  readingAndWritingOfObjects.praat  runAllTests.praat  runAllTests_batch.praat  test_CCA.praat  test_Correlation.praat  test_Discriminant.praat  test_Eigen.praat  test_MDS.praat  test_MFCC.praat  test_PCA.praat  test_PowerCepstrum.praat
dwtools/: ActivationList.h  CCA.cpp  CCA_def.h  CCs_to_DTW.cpp  CMakeLists.txt  CategoriesEditor.cpp  Confusion.cpp  Correlation.cpp  DTW.cpp  Discriminant.cpp  Discriminant_def.h  EditDistanceTable.cpp  EditDistanceTable.h  EditDistanceTable_def.h  Excitations.cpp  FilterBank.cpp  GaussianMixture.cpp  HMM.cpp  ICA.cpp  KlattGrid.cpp  KlattGrid_def.h  LongSound_extensions.cpp  MDS.cpp  MDS.h  MFCC.cpp  Makefile  Matrix_extensions.cpp  Matrix_extensions.h  PCA.cpp  PatternList.h  Proximity.cpp  SSCP.cpp  SampledFrameIntoSampledFrame.cpp  SampledFrameIntoSampledFrame.h  SampledFrameIntoSampledFrame2.cpp  SampledFrameIntoSampledFrame2.h  SampledFrameIntoSampledFrame_def.h  SampledIntoSampled.cpp  SampledIntoSampled.h  SampledIntoSampled2.cpp  (+34 more)
fon/: CMakeLists.txt  Excitation.cpp  H1minusH2Tier.cpp  H1minusH2Tier.h  Harmonicity.cpp  Ltas.cpp  Makefile  Matrix.cpp  Matrix_and_PointProcess.cpp  Photo.cpp  Photo.h  Pitch_to_PointProcess.cpp  Praat_tests.cpp  Praat_tests_enums.h  RealTier.cpp  RealTier.h  Sampled.h  Sound_and_Spectrogram.cpp  Sound_audio.cpp  Sound_enhance.cpp  Sound_files.cpp  Sound_to_Formant.cpp  Sound_to_Pitch.cpp  Spectrogram.cpp  Spectrogram.h  Spectrogram_enums.h  SpeechRecognizer.cpp  SpeechRecognizer.h  SpeechRecognizer_def.h  TextGrid.cpp  TextGrid.h  TextGrid_Sound.cpp  TextGrid_Sound.h  TextGrid_files.cpp  Transition.cpp  VocalTract.cpp  VoiceAnalysis.cpp  cmake_install.cmake  manual_Fon.cpp  manual_Picture.cpp  (+21 more)
foned/: CMakeLists.txt  FormantGridArea.cpp  FunctionEditor-PIBRJ025BR6P.cpp  FunctionEditor.cpp  FunctionEditor_prefs.h  Makefile  ManipulationEditor.cpp  PitchArea.cpp  PointArea.cpp  RealTierArea.cpp  SoundAnalysisArea.cpp  SoundAnalysisArea.h  SoundAnalysisArea_prefs.h  SoundArea.cpp  SoundRecorder.cpp  SpectrogramArea.cpp  TextGridArea.cpp  TextGridArea_prefs.h  cmake_install.cmake
gram/: CMakeLists.txt  Makefile  OTGrammar.cpp  OTGrammarEditor.cpp  OTMulti.cpp  OTMulti_ex_metrics.cpp  (+2 more)
melder/: CMakeLists.txt  MAT.cpp  Makefile  MelderArg.h  MelderCat.h  MelderFile.h  MelderReadText.cpp  MelderString.h  MelderThread.cpp  MelderThread.h  NUM.h  NUMrandom.cpp  NUMrandom.h  STR.cpp  STR.h  STRVEC.cpp  VEC.cpp  VEC.h  cmake_install.cmake  melder.cpp  melder.h  melder_alloc.cpp  melder_app.h  melder_assert.h  melder_audio.cpp  melder_audiofiles.cpp  melder_casual.h  melder_debug.cpp  melder_debug.h  melder_error.cpp  melder_error.h  melder_files.cpp  melder_files.h  melder_ftoa.cpp  melder_ftoa.h  melder_int.h  melder_progress.h  melder_sprint.h  melder_strvec.h  melder_sysenv.cpp  (+9 more)
sys/: CMakeLists.txt  Collection.cpp  Data.cpp  DemoEditor.cpp  DemoEditor.h  Editor.cpp  EditorM.h  Formula.cpp  Formula.h  Graphics.cpp  Graphics.h  GraphicsP.h  GraphicsScreen.cpp  Graphics_image.cpp  Graphics_linesAndAreas.cpp  Graphics_record.cpp  Graphics_text.cpp  Graphics_utils.cpp  Gui.cpp  Gui.h  GuiButton.cpp  GuiDialog.cpp  GuiDrawingArea.cpp  GuiFileSelect.cpp  GuiMenu.cpp  GuiMenuItem.cpp  GuiScale.cpp  GuiShell.cpp  GuiText.cpp  GuiTrust.cpp  GuiWindow.cpp  Gui_messages.cpp  HyperPage.cpp  InfoEditor.cpp  Interpreter.cpp  Interpreter.h  Makefile  ManPage.cpp  ManPages.cpp  ManPages_toHtml.cpp  (+34 more)
(+345 files in other folders)
